SERVER-96378 Delete reconfig_race_with_failover.js test (#28643)

GitOrigin-RevId: 39cfb1a2d6e11b6e7b2f5e5f57152076995582ed